--- a/Curso/Views/Shared/_Layout.cshtml
+++ b/Curso/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Curso</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @await RenderSectionAsync("Header", required: false)
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
@@ -27,9 +29,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Demos" asp-action="Index">Demos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contactos" asp-action="Index">Contactos</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
+                @await RenderSectionAsync("Menu", required: false)
             </div>
         </nav>
     </header>
